--- a/main.html
+++ b/main.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Happy Birthday!</title>
+    <title>Happy Birthday, E.R!</title>
     <style>
         /* Базовый сброс стилей */
         * {
@@ -139,8 +139,8 @@
     <!-- Основная карточка -->
     <div class="card">
         <span class="emoji emoji-font">🎂</span>
-        <h1>Happy Birthday!</h1>
-        <p class="message">Wishing you a wonderful day filled with joy and happiness!</p>
+        <h1>С ДНЁМ РОЖДЕНИЯ!</h1>
+        <p class="message">Пусть каждый день приносит радость и новые возможности, а рядом будут верные друзья и любящие близкие!</p>
     </div>
 
     <script>
