--- a/main.html
+++ b/main.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Happy Birthday, E.R!</title>
+    <title>Поздравление для Егины!</title>
     <style>
         /* Базовый сброс стилей */
         * {
